Added /users/username to swagger
